# lynx-stack

./: .coderabbit.yaml  .dprint.jsonc  .gitignore  .gitmodules  .pnpmfile.cjs  .typos.toml  .vercelignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  PRD.md  Phase_1_5_PRD.md  Phase_2_to_5_Roadmap.md  README.md  REPORT.md  SHIM_REPORT.md  Shim_Design.md  Shim_Implementation_PRD.md  biome.json  biome.jsonc  codecov.yml  cspell.jsonc  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rstest.config.ts  rust-toolchain.toml  test-report.junit.xml  tsconfig.json  turbo.json  vitest.config.ts  vitest.workspace.json
.cargo/: config.toml  nextest.toml
.changeset/: a2ui-full-catalog-json.md  a2ui-icon-component.md  a2ui-icon-font-optin.md  add-css-source-map-diagnostics.md  add-css-sourcemap-option.md  add-event-bubble-support.md  add-lynx-openui-skill.md  add-rspeedy-bundle-size-skill.md  add-willchange-event-to-x-viewpager-ng.md  afraid-chairs-share.md  afraid-meals-attend.md  afraid-places-act.md  align-lynx-terminology.md  all-crabs-smell.md  all-planets-flow.md  allow-debug-url-customize.md  angry-insects-care.md  auto-changeset-for-renovate.md  autolink-library-manifest.md  background-bundling-separation.md  background-first-screen-boundary.md  beige-files-cheat.md  better-insects-grin.md  better-pans-stick.md  better-pears-poke.md  better-pigs-run.md  better-wings-peel.md  big-cycles-kick.md  big-otters-tickle.md  bitter-emus-camp.md  bitter-mails-boil.md  bitter-waves-sleep.md  blue-bats-tease.md  blue-emus-brake.md  blue-lies-flash.md  blue-pears-sin.md  blue-shirts-scream.md  brave-bugs-occur.md  brave-cats-jump.md  brave-feet-relax.md  (+691 more)
.context/: snapshot-compilation-guide-draft.md  snapshot-compilation-guide-zh.md  snapshot-compilation-guide.md  vue3-lynx-gap-analysis.md
.github/: PULL_REQUEST_TEMPLATE.md  a2ui-bench.instructions.md  a2ui-catalog-extractor.instructions.md  a2ui-catalog.instructions.md  a2ui-playground-playback.instructions.md  a2ui-playground.instructions.md  a2ui-resolve-dynamic.instructions.md  a2ui-server-agent.instructions.md  a2ui-server-vercel.instructions.md  a2ui-server.instructions.md  a2ui-skill.instructions.md  a2ui-snapshot.instructions.md  autolink-extension.instructions.md  autolink-library.instructions.md  changeset-ci.instructions.md  codeql-config.yml  copilot-instructions.md  (+71 more)
lynx/engine-bridge/lynx/: Cargo.toml  build.rs
lynx/engine-bridge/lynx/src/: buffer.rs  env.rs  error.rs  group.rs  lib.rs  renderer.rs  resource.rs  view.rs
lynx/engine-bridge/lynx/src/sys/: bindings.rs  loader.rs  mod.rs
lynx/engine-bridge/lynx/tests/: runtime.rs
(+435 files in other folders)
