[workspace]
resolver = "2"

members = [
  "packages/genui/ui-judge",
  "packages/react/transform",
  "packages/react/transform/crates/*",
  "packages/react/transform/swc-plugin-reactlynx",
  "packages/react/transform/swc-plugin-reactlynx-compat",
  "packages/web-platform/web-core",
  "packages/web-platform/web-elements",
]

[workspace.dependencies]
base64 = "0.22.1"
convert_case = "0.8.0"
dashmap = "5.5.3"
droidrun-adb = "0.1.2"
hex = "0.4.3"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
indexmap = "2.11.4"
js-sys = "0.3.85"
lazy_static = "1.5.0"
napi = { version = "2.7.0", default-features = false, features = ["napi4"] }
napi-derive = "2.7.0"
once_cell = "1.21.3"
regex = "1.11.3"
rustc-hash = "2.1.1"
semver = "1.0.22"
serde = "1.0.228"
serde_json = "1.0.145"
serial_test = "3.5.0"
sha-1 = "0.10.1"
sha2 = "0.10.9"
sugar_path = "1.2.0"
swc_core = "56.0.0"
swc_sourcemap = "9.3.4"
thiserror = "2.0.18"
tokio = "1.52.3"
version-compare = "0.2.0"
wasm-bindgen = "0.2.108"
web-sys = "0.3.85"

[profile.release]
codegen-units = 1
# debug = true
lto = true
opt-level = "s"
