[workspace]
resolver = "2"

members = [
  "packages/genui/ui-judge",
  "packages/lynx/engine-bridge/lynx",
  "packages/lynx/headless-rust-test-runner",
  "packages/react/transform",
  "packages/react/transform/crates/*",
  "packages/react/transform/swc-plugin-reactlynx",
  "packages/react/transform/swc-plugin-reactlynx-compat",
  "packages/web-platform/web-core",
  "packages/web-platform/web-elements",
]

[workspace.dependencies]
convert_case = "0.11.0"
dashmap = "5.5.3"
hex = "0.4.3"
indexmap = "2.14.0"
js-sys = "0.3.103"
lazy_static = "1.5.0"
napi = { version = "2.7.0", default-features = false, features = ["napi4"] }
napi-derive = "2.7.0"
once_cell = "1.21.4"
regex = "1.13.1"
rustc-hash = "2.1.3"
semver = "1.0.28"
serde = "1.0.229"
serde_json = "1.0.151"
sha-1 = "0.10.1"
sha2 = "0.11.0"
sugar_path = "1.2.1"
swc_core = "56.0.0"
swc_sourcemap = "9.3.4"
tokio = "1.53.1"
version-compare = "0.2.1"
wasm-bindgen = "0.2.108"
web-sys = "0.3.103"

[profile.release]
codegen-units = 1
# debug = true
lto = true
opt-level = "s"
