[package]
name = "lynx"
version = "0.1.0"
build = "build.rs"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.70"
description = "Safe Rust wrapper for windowless/headless Lynx embedding."

[lib]
path = "src/lib.rs"

[dependencies]
libloading = "0.8"
thiserror = "1"

[build-dependencies]
fs2 = "0.4"
tempfile = "3"
ureq = "2"
